--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -2,7 +2,7 @@
 title: "Implementing refresh token"
 ---
 
-[Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security method that allows users to obtain a new, short-lived access token without requiring them to log in again.
+[Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
 
 In this guide, learn how to implement the refresh token workflow in a FastStore store.
 
@@ -25,7 +25,7 @@ yarn upgrade -L --scope @faststore
 
 ### Request the refresh token activation
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time, such as 7 days. Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time (1, 7 or 30 days). Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
 
 </Steps>
 
