Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -25,14 +25,14 @@ yarn upgrade -L --scope @faststore
 
 ### Request the refresh token activation
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time (1, 7 or 30 days). Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time (1, 7, or 30 days). Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
 
 </Steps>
 
 ## Instructions
 
 1. Open your FastStore project in a code editor.
-2. Go to the `discovery.config.js` file, in the `experimental` section, add the `refreshToken` flag with the value `true`:
+2. In the `discovery.config.js` file, within the `experimental` section, add the `refreshToken` flag with the value `true`:
 
 
     ```js discovery.config.js
