Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -23,7 +23,7 @@ Make sure your project is updated to the latest version. To do so, follow these 
 yarn upgrade -L --scope @faststore
 ```
 
-### Request the refresh token activation
+### Request refresh token activation
 
 Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time (1, 7, or 30 days). Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
 
