Peer review: title

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Implementing refresh token"
+title: "Implementing refresh token on FastStore"
 ---
 
 [Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
