Add info about FS abstraction with refresh token

--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -4,9 +4,11 @@ title: "Implementing refresh token on FastStore"
 
 [Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
 
-In this guide, learn how to implement the refresh token workflow in a FastStore store.
+The [FastStore SDK Session](https://developers.vtex.com/docs/guides/faststore/sdk-overview#session) abstracts the [refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) flow logic and handles the entire refresh token flow, including token renewal, session management, and error handling.
 
-> ℹ️ For more information on how the refresh token flow works, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
+In this guide, learn how to implement the refresh token flow in a FastStore store.
+
+> ℹ️ For background reference on how refresh tokens work, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
 
 ## Before you begin
 
