--- a/docs/faststore/docs/security/implementing-refresh-token.mdx
+++ b/docs/faststore/docs/security/implementing-refresh-token.mdx
@@ -8,7 +8,7 @@ The [FastStore SDK Session](https://developers.vtex.com/docs/guides/faststore/sd
 
 In this guide, learn how to implement the refresh token flow in a FastStore store.
 
-> ℹ️ For background reference on how refresh tokens work, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
+> ℹ️ For background on how refresh tokens work, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
 
 ## Before you begin
 
@@ -27,7 +27,7 @@ yarn upgrade -L --scope @faststore
 
 ### Request refresh token activation
 
-Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request the refresh token activation and expiration time (1, 7, or 30 days). Include the account name(s) to enable the feature in your request. Without this activation, you won’t be able to enable the refresh token in your account.
+Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request refresh token activation and expiration time (1, 7, or 30 days). Include the account name(s) in your request to enable the feature. Without this activation, you won’t be able to enable the refresh token in your account.
 
 </Steps>
 
