--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -1,12 +1,13 @@
 ---
-title: "Implementing refresh token on FastStore"
+title: "Enabling refresh token on FastStore"
 ---
 
 [Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
 
-The [FastStore SDK Session](https://developers.vtex.com/docs/guides/faststore/sdk-overview#session) abstracts the [refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) flow logic and handles the entire refresh token flow, including token renewal, session management, and error handling.
+The [FastStore SDK Session module](https://developers.vtex.com/docs/guides/faststore/sdk-overview#session) abstracts the [refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) flow logic and handles the entire refresh token flow, including token renewal, session management, and error handling.
+As a FastStore user, you only need to enable refresh token in your project, without building the flow logic from scratch.
 
-In this guide, learn how to implement the refresh token flow in a FastStore store.
+In this guide, learn how to enable refresh token in a FastStore store.
 
 > ℹ️ For background reference on how refresh tokens work, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
 
