Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -9,7 +9,7 @@ As a FastStore user, you only need to enable refresh token in your project, with
 
 In this guide, learn how to enable refresh token in a FastStore store.
 
-> ℹ️ For background on how refresh tokens work, refer to the [Refresh token flow for headless implementation guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
+> ℹ️ For background on how refresh tokens work, refer to the [Refresh token flow for headless implementations guide](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations).
 
 ## Before you begin
 
