Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -45,4 +45,4 @@ Open a ticket with [VTEX Support](https://help.vtex.com/en/support) to request r
     }
     ```
 
-3. Commit and push your changes to the main branch to deploy the update to production.
+3. Commit and push your changes to the main branch to deploy the changes to production.
