Apply suggestions from code review
Co-authored-by: Júlia Rabello <77292838+julia-rabello@users.noreply.github.com>

--- a/docs/faststore/docs/security/enabling-refresh-token.mdx
+++ b/docs/faststore/docs/security/enabling-refresh-token.mdx
@@ -5,7 +5,7 @@ title: "Enabling refresh token on FastStore"
 [Refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) is a security mechanism that allows users to obtain a new, short-lived access token without requiring them to log in again.
 
 The [FastStore SDK Session](https://developers.vtex.com/docs/guides/faststore/sdk-overview#session) abstracts the [refresh token](https://developers.vtex.com/docs/guides/refresh-token-flow-for-headless-implementations) flow logic and handles the refresh token flow, including token renewal, session management, and error handling.
-As a FastStore user, you only need to enable the refresh token in your project, without building the flow logic from scratch.
+As a FastStore user, you only need to enable the refresh token in your project configuration. The SDK will manage the process automatically, without requiring custom flow implementation.
 
 In this guide, learn how to enable the refresh token in a FastStore store.
 
