--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -134,9 +134,14 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 </OverviewSection>
 
 ```tsx
-<Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
-  Add to Cart
-</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button variant="primary">Add to Cart</Button>
+
+    );
+}
 ```
 
 <TokenTable>
