Fix primary code example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -167,7 +167,15 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button variant="primary">Button</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button variant="primary">Button</Button>
+
+
+    );
+}
 ```
 
 <TokenTable>
