Fix primary inverse code example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -244,9 +244,16 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button inverse variant="primary">
-  Button
-</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button inverse variant="primary">
+            Button
+        </Button>
+
+    );
+}
 ```
 
 <TokenTable>
