Fix secondary code example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -322,7 +322,14 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button variant="secondary">Button</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button variant="secondary">Button</Button>
+
+    );
+}
 ```
 
 <TokenTable>
