Fix secondary inverse example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -400,9 +400,15 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button inverse variant="secondary">
-  Button
-</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button inverse variant="secondary">
+            Button
+        </Button>
+    );
+}
 ```
 
 <TokenTable>
