Fix tertiary inverse code example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -557,9 +557,16 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button inverse variant="tertiary">
-  Button
-</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button inverse variant="tertiary">
+            Button
+        </Button>
+
+    );
+}
 ```
 
 <TokenTable>
