Fix Disabled code example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -643,9 +643,17 @@ export function Example() {
 </OverviewSection>
 
 ```tsx
-<Button variant="primary" disabled>
-  Button
-</Button>
+import { Button } from "@faststore/ui";
+
+export function Example() {
+    return (
+        <Button variant="primary" disabled>
+            Button
+        </Button>
+
+
+    );
+}
 ```
 
 <TokenTable>
