--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -12,6 +12,8 @@ This guide explains how the solution operates, covering:
 * [Filter options](#filter-options): Learn how shoppers can filter products by delivery or pickup methods.
 * [Location priority](#location-priority): Understand the order and logic used to determine the shopper's location for accurate delivery estimates.
 
+To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/features-delivery-promise-implementation).
+
 ## Hooks
 
 This feature introduces the following hooks as part of the regionalization and location workflow:
@@ -86,3 +88,4 @@ graph LR
 
     H -- No --> N(["Display products without using Delivery Promise"])
 ```
+
