--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -116,19 +116,25 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Default usage
 
-<OverviewSection>
-  <Button variant="primary">Add to Cart</Button>
-</OverviewSection>
-```tsx
-import { Button } from "@faststore/ui";
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Button variant="primary">Add to Cart</Button>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    import { Button } from "@faststore/ui";
 
-export function Example() {
-    return (
-        <Button variant="primary">Add to Cart</Button>
+    export function Example() {
+        return (
+            <Button variant="primary">Add to Cart</Button>
 
-    );
-}
-```
+        );
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
