--- a/docs/faststore/components/features/delivery-promise/implementation.mdx
+++ b/docs/faststore/components/features/delivery-promise/implementation.mdx
@@ -106,11 +106,11 @@ Run the `faststore cms-sync` command to sync the `cms` folder of your FastStore 
 
 The expected response is that you receive the message `CMS synced successfully...`. The native regionalization components and sections will be automatically updated. You can check them in the VTEX Admin:
 
-- **Regionalization component:** Go to *Storefronts > Headless CMS > Global Sections > NavBar > Navigation > Regionalization*.
+- **Regionalization component:** Go to **Storefronts > Headless CMS > Global Sections > NavBar > Navigation > Regionalization**.
 
-- **Region Bar section:** Go to *Storefronts > Headless CMS > Global Sections > Region Bar*.
+- **Region Bar section:** Go to **Storefronts > Headless CMS > Global Sections > Region Bar**.
 
-- **Region Modal section:** Go to *Storefronts > Headless CMS > Global Sections > Region Modal*.
+- **Region Modal section:** Go to **Storefronts > Headless CMS > Global Sections > Region Modal**.
 
 You only need to [add a new section](#step-3-adding-region-popover-section), the `Region Popover`.
 
@@ -311,7 +311,7 @@ Follow the steps below to add the `RegionPopover` section to the Headless CMS.
 
 Learn more in [Adding Sections to the Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-3-adding-content-types-and-sections#step-3-adding-sections-to-the-headless-cms)
 
-### Step 4 - [Optional] Defining a default postal code
+### Step 4 - (Optional) Defining a default postal code
 
 The default postal code is a fallback mechanism when the user doesn't provide a location, isn't logged in, or has no saved address.
 
