--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -6,6 +6,8 @@ title: "Delivery Promise (Beta)"
 
 **Delivery Promise** is a feature that provides accurate and reliable delivery estimates for available products based on the customer's location. It ensures that customers only see products that are in stock and can be delivered to their address or picked up at a nearby location.
 
+This solution continuously updates product availability throughout the buying journey by responding to changes in catalog, pricing, inventory, or shipping settings. These updates are then sent to [Checkout](https://developers.vtex.com/docs/guides/checkout-overview) and [Intelligent Search](https://help.vtex.com/tracks/vtex-intelligent-search), ensuring customers see up-to-date options based on their region.
+
 This guide explains how the solution operates, covering:
 
 * [Hooks](#hooks): Discover the hooks used to manage user location, fulfillment options, and delivery promise workflows.
@@ -88,4 +90,5 @@ graph LR
 
     H -- No --> N(["Display products without using Delivery Promise"])
 ```
+
 
