--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -4,7 +4,7 @@ title: "Delivery Promise components"
 
 This guide outlines the main components related to the Delivery Promise feature for FastStore. It details the structure of these elements and emphasizes the necessary customizations when altering standard sections, such as `NavBar` and `ProductGallery`.
 
-You'll understand which components are reusable and which need to be customized, serving as a connection between native implementation and customized modifications.
+You'll understand which components are reusable and which need to be customized, illustrating the connection between native implementation and customized modifications.
 
 Delivery Promise introduces a set of modular components and hooks. These are structured in the FastStore core and UI packages, and are inserted into key sections. We'll focus on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, including the FastStore starter.
 
@@ -30,7 +30,7 @@ This component leverages the following:
 
 ### RegionModal
 
-`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, such that the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
+`RegionModal` is a component that serves as a section under the Global Sections content type in the Headless CMS. It contains logic to enforce mandatory location entry if specified in the `discovery.config.js` file, so that the modal cannot be closed without providing a location. It checks for valid postal codes and verifies product availability for the given location.
 
 When customizing the `NavBar` section, you must also customize `RegionModal`.
 
